Most of the page works

--- a/react/src/assets/project.json
+++ b/react/src/assets/project.json
@@ -2,16 +2,16 @@
     {
         "title": "Project 1",
         "summary": "This is a summary for Project 1",
-        "contributors": "Contributors for Project 1"
+        "contributors": "Albert Negoro, Albert Fu"
     },
     {
         "title": "Project 2",
         "summary": "This is a summary for Project 2",
-        "contributors": "Contributors for Project 2"
+        "contributors": "Lionel Messi, Cristiano Ronaldo"
     },
     {
         "title": "Project 3",
         "summary": "This is a summary for Project 3",
-        "contributors": "Contributors for Project 3"
+        "contributors": "Tony Stark, Steve Rogers, Scott Leng, Superman"
     }
 ]
