--- a/react/package.json
+++ b/react/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
+    "react-simple-maps": "^1.0.0",
     "react-webcam": "^7.0.1",
     "styled-components": "^5.3.10"
   },
