--- a/react/package.json
+++ b/react/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mediapipe/tasks-vision": "^0.10.6",
     "@tensorflow-models/handpose": "^0.0.7",
     "@tensorflow/tfjs": "^4.6.0",
     "react": "^18.2.0",
