--- a/react/.gitignore
+++ b/react/.gitignore
@@ -1,2 +1,47 @@
-# dependencies
-/node_modules
+# Dependency directories
+node_modules/
+
+# Build output
+/build/
+/dist/
+
+# Env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE / Editors
+.idea/
+*.sublime-project
+*.sublime-workspace
+.vscode/
+*.esproj
+*.sln
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Dependency lock files
+package-lock.json
+yarn.lock
+
+# Compiled files
+*.compiled.js
+*.min.js
+*.map
+
+# Misc
+*.gz
+*.zip
+*.tar
+*.tar.gz
