--- a/react/package.json
+++ b/react/package.json
@@ -13,8 +13,11 @@
     "@mediapipe/tasks-vision": "^0.10.6",
     "@tensorflow-models/handpose": "^0.0.7",
     "@tensorflow/tfjs": "^4.6.0",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-is": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-simple-maps": "^1.0.0",
     "react-webcam": "^7.0.1",
