--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.4",
     "helmet": "^7.1.0",
@@ -16,7 +17,7 @@
   "description": "This is for the backend of the computer vision club at ASU",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --timeout 20000"
   },
   "author": "",
   "license": "ISC"
