--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,10 @@
     "express-rate-limit": "^7.1.4",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^10.2.0",
     "mongoose": "^8.0.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "supertest": "^6.3.3"
   },
   "name": "backend",
   "version": "1.0.0",
